# do-dep

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: api.py  init_db.py  main.py  pyproject.toml  schemas.py  settings.py
app/db/: models.py  session.py
app/src/app/: __init__.py  game_logic.py  schemas.py  settings.py
app/src/app/db/: models.py  session.py
app/src/app/workers/: refill.py
docs/: index.html
infra/: Caddyfile
services/api/: Dockerfile  pyproject.toml
services/api/src/api/: __init__.py  api.py  main.py
services/bot/: Dockerfile  pyproject.toml
services/bot/src/bot/: __init__.py  handlers.py  main.py
template/: index.html
web/: index.html
