[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.13.2"
description = "FastAPI service for the Telegram Gaming Platform backend"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "aiogram==3.*",
  "pyjwt>=2.8",
  "app",
]

[tool.uv.sources]
app = { workspace = true }

[dependency-groups]
dev = ["ruff"]

[build-system]
requires = ["uv-build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
api = "services.api.main:main"
